@@ -141,6 +141,7 @@ enum guCommandIds {
     ID_PLAYER_PLAYLIST_COPYTO,
     ID_PLAYER_PLAYLIST_EDITLABELS,
     ID_PLAYER_PLAYLIST_EDITTRACKS,
+    ID_PLAYER_PLAYLIST_SEARCH,
     //
     ID_RADIO_PLAY,
     ID_RADIO_ENQUEUE,
